...
            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/statisticsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="5"
                android:contentDescription="@string/statics_button_description"
                app:srcCompat="@drawable/rectangle_grey_top" />

            <ImageView
                android:id="@+id/settingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="5"
                android:contentDescription="@string/settings_button_description"
                app:srcCompat="@drawable/rectangle_grey_bottom" />
...
